@@ -18,7 +18,7 @@ usage() {
         echo OPTIONS:
         echo " -b DIR     backup directory. Default: /vol/backup/HOSTNAME"
         echo " -c REMOTE  dump the backup on a remote machine with ssh"
-        echo " -l NUM     limit transfer to NUM bytes/second. See cstream(1)'s -t"
+        echo " -l NUM     limit transfer to NUM bytes/second, see cstream(1)'s -t"
         echo " -e         filelist and timestamp are put in backup directory"
         echo " -z         compress all files"
         echo " -k KEYFILE encrypt all files"
@@ -45,7 +45,7 @@ _echo2() {
         echo "** $PROGNAME: $1" > /dev/fd/2
 }
 
-while getopts ":b:k:l:vzehV" o; do
+while getopts ":b:k:l:c:vzehV" o; do
         case $o in
                 b) BACKUPDIR=$OPTARG;;
                 k) KEYFILE=$OPTARG;;
@@ -129,13 +129,13 @@ else
         if [[ -z "$KEYFILE" ]]; then
                 if [[ $gzip -eq 0 ]]; then
                         if [[ -z $bwidth ]]; then
-                                @sbindir@/rdup -N $STAMP $LIST $@ | \
-                                # compress stream here
-                                ssh -x -C "$remote" mirror.sh $verbose -b "$BACKUPDIR"
+                                @sbindir@/rdup -c -N $STAMP $LIST $@ | \
+                                # do compress stream here
+                                ssh -x -C "$remote" mirror.sh $verbose -c -b "$BACKUPDIR"
                         else
                                 @sbindir@/rdup -N $STAMP $LIST $@ | \
                                 $cstream -t $bwidth | \
-                                ssh -x -C "$remote" mirror.sh $verbose -b "$BACKUPDIR"
+                                ssh -x -C "$remote" mirror.sh $verbose -c -b "$BACKUPDIR"
                         fi
                 else 
                         if [[ -z $bwidth ]]; then
