@@ -10,6 +10,7 @@ xx May 2006: 0.2.11 Miek <miek@miek.nl>
      needs it [Linux only atm]
    * bandwidth shaping was added to dump.sh and restore.sh. This
      relies entirely on cstream. Use the -l flag to enable this
+   * dump.sh, restore.sh: major bugfixes
 
 01 May 2006: 0.2.10 Miek <miek@miek.nl>
   -- tiny bugfixes + major restore updates --
